--- a/jaimewebdev.com/css/style.comp.css
+++ b/jaimewebdev.com/css/style.comp.css
@@ -69,6 +69,9 @@ a {
   max-width: 80rem;
   overflow: hidden;
   padding-bottom: 4.5rem; }
+  @media only screen and (max-width: 37.5em) {
+    .row {
+      padding-bottom: 1.5rem; } }
   @media only screen and (max-width: 25em) {
     .row {
       padding-bottom: 1rem; } }
@@ -198,18 +201,21 @@ a {
 
 .section__services {
   padding: 6rem 3.5rem 8rem 3.5rem; }
+  @media only screen and (max-width: 50em) {
+    .section__services {
+      padding: 6rem 0 1rem 0; } }
   @media only screen and (max-width: 43.57em) {
     .section__services {
-      padding: 6rem 2rem 1rem 2rem; } }
+      padding: 4rem 2rem 1rem 2rem; } }
   @media only screen and (max-width: 37.5em) {
     .section__services {
-      padding: 6rem 1.5rem 3rem 1.5rem; } }
+      padding: 3rem 1.5rem 3rem 1.5rem; } }
   @media only screen and (max-width: 25em) {
     .section__services {
-      padding: 6rem 1.3rem 3rem 1.3rem; } }
+      padding: 3rem 1.3rem 3rem 1.3rem; } }
   @media only screen and (max-width: 23.43em) {
     .section__services {
-      padding: 6rem 1rem 3rem 1rem; } }
+      padding: 3rem 1rem 3rem 1rem; } }
 
 .services__container {
   display: flex; }
@@ -243,7 +249,13 @@ a {
     width: 85%; }
     @media only screen and (max-width: 50em) {
       .services__content-text {
-        margin-top: 1rem; } }
+        margin-top: 1rem;
+        padding-top: 0;
+        width: 92%; } }
+    @media only screen and (max-width: 43.57em) {
+      .services__content-text {
+        margin-top: 1rem;
+        width: 100%; } }
 
 .btn {
   display: inline-block;
@@ -362,7 +374,7 @@ a {
         height: 100vh; } }
   .popup__right {
     width: 34%;
-    height: auto;
+    height: 100%;
     margin-top: 5rem;
     padding: 0 6rem 0 6rem; }
     @media only screen and (max-width: 222.5em) {
@@ -378,17 +390,18 @@ a {
         margin-top: 30rem; } }
     @media only screen and (max-width: 43.57em) {
       .popup__right {
-        width: 100%;
-        margin-top: 30rem; } }
+        padding: 0 1.9rem 0 1.9rem;
+        margin-top: 28rem; } }
     @media only screen and (max-width: 37.5em) {
       .popup__right {
+        padding: 0 1.5rem 0 1.5rem;
         margin-top: 26rem; } }
     @media only screen and (max-width: 25em) {
       .popup__right {
-        margin-top: 27rem; } }
+        margin-top: 25rem; } }
     @media only screen and (max-width: 23.43em) {
       .popup__right {
-        margin-top: 22rem; } }
+        margin-top: 26rem; } }
   .popup__img {
     position: absolute;
     top: 10%;
@@ -399,11 +412,11 @@ a {
     @media only screen and (max-width: 62.5em) {
       .popup__img {
         top: 5%;
-        width: 50%; } }
+        width: 56%; } }
     @media only screen and (max-width: 50em) {
       .popup__img {
-        top: 5%;
-        width: 58%; } }
+        top: 3%;
+        width: 63%; } }
     @media only screen and (max-width: 43.57em) {
       .popup__img {
         width: 65%;
@@ -411,19 +424,18 @@ a {
         left: 5%; } }
     @media only screen and (max-width: 37.5em) {
       .popup__img {
-        width: 70%;
-        top: 10%;
-        left: 6%; } }
+        width: 74%;
+        top: 7%;
+        left: 5%; } }
     @media only screen and (max-width: 25em) {
       .popup__img {
-        width: 75%;
-        top: 9%;
-        left: 10%; } }
+        top: 8%;
+        left: 5%; } }
     @media only screen and (max-width: 23.43em) {
       .popup__img {
-        width: 70%;
-        top: 6%;
-        left: 8%; } }
+        width: 80%;
+        top: 8%;
+        left: 6%; } }
   .popup__text {
     font-family: "Raleway", sans-serif;
     font-size: 1.3rem;
@@ -431,9 +443,13 @@ a {
     line-height: 1.3;
     letter-spacing: .5px;
     color: #444; }
+    @media only screen and (max-width: 25em) {
+      .popup__text {
+        width: 100%; } }
     @media only screen and (max-width: 23.43em) {
       .popup__text {
-        font-size: 1.3rem; } }
+        font-size: 1.3rem;
+        margin-bottom: 1rem; } }
   .popup:target {
     opacity: 1;
     visibility: visible; }
@@ -453,7 +469,8 @@ a {
     z-index: 110; }
     @media only screen and (max-width: 37.5em) {
       .popup__close:link, .popup__close:visited {
-        top: 2rem; } }
+        right: 1.5rem;
+        top: 2.3rem; } }
   .popup__close:hover {
     color: #00ADDA; }
 
@@ -470,11 +487,18 @@ a {
   margin-right: 1rem; }
   @media only screen and (max-width: 75em) {
     .btn-popup {
-      margin-right: 0; } }
+      margin-right: 1rem; } }
+  @media only screen and (max-width: 37.5em) {
+    .btn-popup {
+      margin: 1rem .8rem 0 0; } }
+  @media only screen and (max-width: 25em) {
+    .btn-popup {
+      display: inline-block;
+      width: 30%; } }
   @media only screen and (max-width: 23.43em) {
     .btn-popup {
-      display: flex;
-      margin-bottom: 1rem; } }
+      margin: 1rem .2rem 0 0;
+      width: 35%; } }
   .btn-popup:hover {
     color: #444;
     background: #fff;
@@ -762,12 +786,9 @@ button.scroll_down:before {
       background-repeat: no-repeat;
       position: relative;
       background-attachment: fixed; } }
-  @media only screen and (max-width: 43.57em) {
+  @media only screen and (max-width: 50em) {
     .projects__section {
-      padding-bottom: 2rem; } }
-  @media only screen and (max-width: 23.43em) {
-    .projects__section {
-      padding-bottom: 2rem; } }
+      padding: 4rem 0 0 0; } }
 
 .project-content {
   position: relative;
@@ -935,9 +956,9 @@ button.scroll_down:before {
 .section__skills {
   background: #f2f4f6;
   padding: 6rem 2rem 8rem 2rem; }
-  @media only screen and (max-width: 37.5em) {
+  @media only screen and (max-width: 43.57em) {
     .section__skills {
-      padding: 6rem 1rem 8rem 1rem; } }
+      padding: 4rem 1rem 8rem 1rem; } }
 
 .skills {
   display: grid;
@@ -1041,6 +1062,9 @@ button.scroll_down:before {
   width: 100%;
   display: flex;
   justify-content: center; }
+  @media only screen and (max-width: 50em) {
+    .heading-secondary {
+      margin-bottom: 6rem; } }
   .heading-secondary:after {
     content: "";
     position: absolute;
@@ -1099,6 +1123,9 @@ button.scroll_down:before {
 .omnifood-color {
   color: #e67e22; }
 
+.portfolio-color {
+  color: #00ADDA; }
+
 .section__contact {
   padding: 6rem 0 8rem 0;
   background-image: linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.8)), url(../img/bg-contact.jpg);
@@ -1111,7 +1138,7 @@ button.scroll_down:before {
       background-attachment: fixed; } }
   @media only screen and (max-width: 43.57em) {
     .section__contact {
-      padding: 6rem 0 5rem 0; } }
+      padding: 4rem 0 5rem 0; } }
 
 .form__group {
   display: flex;
